--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ukwiecona/.vscode/settings.json
 ukwiecona/.vscode/ftp-kr.json
+wybrane_zdjecia/
 ukwiec.code-workspace
 ukwiecona/.vscode/ftp-kr.diff.index.2.php
 ukwiecona/.vscode/ftp-kr.sync.cache.json
