Almost finished gallery slider

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ wybrane_zdjecia/
 ukwiec.code-workspace
 ukwiecona/.vscode/ftp-kr.diff.index.2.php
 ukwiecona/.vscode/ftp-kr.sync.cache.json
+project.afdesign
